# vaccumbot

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_vaccumbot.yaml  vaccumbot_controller.yaml  vaccumbot_lds_2d.lua
launch/: amcl.launch  amcl_move_base.launch  depthimage_to_laserscan.launch  display.launch  gazebo.launch  gmapping.launch  move_base.launch  rviz.launch  vaccumbot_cleaning.launch  vaccumbot_navigation.launch  vaccumbot_tracker.launch  vaccumbot_urdf_v1.launch  vaccumbot_urdf_v2.launch
maps/: house.yaml  test_map.yaml
meshes/: base_link.STL  fcam_link.STL  flwp_link.STL  fvc_link.STL  lw_link.STL  name_link.STL  rvc_link.STL  rw_link.STL  strasm_link.STL  sw_link.STL  tcam_link.STL
param/: costmap_common_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml
rviz/: depth_camera.rviz  drive_bot.rviz  gmapping.rviz  navigation.rviz  rviz.rviz  sensor.rviz
scripts/: cleaning_space.py  dynamic_obstacle.py  goal_pose.py  keyboard_teleop.py  object_tracking.py  vaccuming.py
urdf/: vaccumbot.urdf  vaccumbot.urdf.xacro  vaccumbot_camera.xacro  vaccumbot_core.xacro  vaccumbot_depth_camera.xacro  vaccumbot_gazebo_control.xacro  vaccumbot_lidar.xacro
worlds/: vaccumbot_house.world
